Integrate extensions service discovery & configuration management into core (#1815)
* Remove consul dependency from service discovery

* Migrate configuration storage from Consul to CouchDB

* Add service health check

* Move configs to messaging settings

* Migrate configuration section in UI

* Migrate configuration section in UI

* Rename consul configuration components in UI

* Add messaging layer settings to configuration section

* Migrate config extractors

* Improve service registration and deregistration

* Cleanup, delete obsolete code

* Remove empty css file

* Fix imports

* Modify setup to install pipeline elements in background

* Fix client resolution

* Fix typo in Cypress config